horizontal scroll fix

--- a/src/sass/layout/_movie-modal.scss
+++ b/src/sass/layout/_movie-modal.scss
@@ -8,11 +8,9 @@
   overflow: scroll;
 }
 
+// button [disabled] {
 
-
-    // button [disabled] {
-     
-    // }
+// }
 
 .movie-popup {
   padding: 44px 20px;
@@ -24,8 +22,6 @@
   width: 95%;
   max-width: 280px;
   overflow: scroll;
-
-
 
   @media screen and (max-width: $tablet) {
     max-height: 600px;
@@ -80,7 +76,7 @@
   @media screen and (min-width: $tablet) {
     min-width: 264px;
     min-height: 374px;
-    margin-right: 68px;
+    margin-right: 20px;
   }
 
   @media screen and (min-width: $desktop) {
@@ -210,19 +206,17 @@
   border: 1px solid var(--second-color);
   padding: 13px;
 
-
-  &:hover, &:focus
-  {
+  &:hover,
+  &:focus {
     color: var(--main-color);
     background-color: var(--accent-color);
     border: 1px solid var(--accent-color);
   }
-    &:disabled {
-      border: 1px solid #999999;
-      background-color: #cccccc;
-      color: #666666;
-    }
-      
+  &:disabled {
+    border: 1px solid #999999;
+    background-color: #cccccc;
+    color: #666666;
+  }
 }
 
 .movie-info__button--queued {
